<resources
  xmlns:tools="http://schemas.android.com/tools"
  tools:ignore="MissingTranslation">
    <string name="app_name">boQwI\' v2</string>
    <string name="database_created">Database v%1$s created.</string>
    <string name="database_upgraded">Database upgraded from v%1$s to v%2$s.</string>
    <string name="search_label">Data banks</string>
    <string name="search_hint">Search the data banks</string>
    <string name="menu_search">Search</string>
    <string name="menu_speak">Speak this entry</string>
    <string name="menu_share">Share this entry</string>
    <string name="share_popup_title">Share using...</string>
    <string name="shared_from">Shared from {boQwI\'}.</string>
    <string name="menu_request_translation">Request translation</string>
    <string name="settings_description">Klingon words and sentences</string>
    <string name="search_instructions">Use the Search button to find information, or select an item from the menu.</string>
    <plurals name="search_results">
      <item quantity="one"><![CDATA[%1$d result for &lt;<b>%2$s</b>&gt;: ]]></item>
      <item quantity="other"><![CDATA[%1$d results for &lt;<b>%2$s</b>&gt;: ]]></item>
    </plurals>
    <string name="no_results"><![CDATA[No results found for &lt;<b>%s</b>&gt;.]]></string>
    <string name="menu_about">boQwI\' - Help</string>
    <string name="menu_preferences">Preferences</string>
    <string name="menu_reference">Reference</string>
    <string name="menu_pronunciation">Pronunciation</string>
    <string name="menu_prefixes">Prefixes</string>
    <string name="menu_prefix_chart">Prefix charts</string>
    <string name="menu_noun_suffixes">Noun suffixes</string>
    <string name="menu_verb_suffixes">Verb suffixes</string>
    <string name="menu_sources">Sources</string>
    <string name="menu_phrases">Useful phrases</string>
    <string name="menu_lists">Lists</string>
    <string name="menu_media">Media</string>
    <string name="menu_social">Social</string>
    <string name="menu_kli">Klingon Language Institute</string>
    <string name="menu_kli_lessons">Online Lessons</string>
    <string name="menu_kli_questions">Ask Questions!</string>
    <string name="menu_social_network">Social network</string>
    <string name="menu_gplus">G+ Community</string>
    <string name="menu_facebook">Facebook group</string>
    <string name="menu_kag">KAG Communications</string>
    <string name="menu_kidc">Klingon Imperial Forums</string>
    <string name="media_1_title">Klingon lessons</string>
    <string name="media_1_list_id">PLJrTr05h0I0OcaX5G6_5TCuIisvS4Xed6</string>
    <string name="media_2_title">Conversational phrases</string>
    <string name="media_2_list_id">PLJrTr05h0I0MazOxYJq47Eqdsa9F2glPg</string>
    <string name="media_3_title">Battle commands</string>
    <string name="media_3_list_id">PLJrTr05h0I0Mwfo-f1YJv1VC7pNgiqicp</string>
    <string name="media_4_title">Other commands</string>
    <string name="media_4_list_id">PLJrTr05h0I0PuQHLzrhp0n4TXsOZVzYzo</string>
    <string name="media_5_title">Curses</string>
    <string name="media_5_list_id">PLJrTr05h0I0NHU5zsb7rd7Vz0Ed_4hLhg</string>
    <string name="media_6_title">Other words and phrases</string>
    <string name="media_6_list_id">PLJrTr05h0I0MsVYmwqMCXp8rwDjSKZzWC</string>
    <string name="empire_union_day">Empire Union Day</string>
    <string name="curse_warfare">Curse Warfare</string>
    <string name="nentay">Rite of Ascension</string>
    <string name="military_celebration">QI\'lop holiday</string>
    <string name="rejection">Rejecting a suitor</string>
    <string name="replacement_proverbs">Replacement Proverbs</string>
    <string name="secrecy_proverbs">Secrecy Proverbs</string>
    <string name="proverbs">Other Proverbs</string>
    <string name="toasts">Toasts</string>
    <string name="lyrics">Lyrics</string>
    <string name="idioms">Idioms</string>
    <string name="beginners_conversation">Beginner\'s Conversation</string>
    <string name="jokes">Jokes and Funny Stories</string>
    <string name="list_names">Names</string>
    <string name="list_places">Places</string>
    <string name="klingon_assistant_settings">boQwI\' settings</string>
      <string name="language_preferences">Language preferences</string>
        <string name="klingon_ui_preference_title">Klingon UI</string>
        <string name="klingon_ui_preference_summary">Use {tlhIngan Hol} for the user interface language.</string>
        <string name="klingon_font_preference_title">{pIqaD}</string>
        <string name="klingon_font_preference_summary">Display Klingon text using {pIqaD}.</string>
        <string name="show_german_definitions_preference_title">Show German definitions</string>
        <string name="show_german_definitions_preference_summary">Display German translations of the definitions.</string>
        <string name="search_german_definitions_preference_title">Search German definitions</string>
        <string name="search_german_definitions_preference_summary">Include German definitions when searching.</string>
      <string name="input_preferences">Input preferences</string>
        <string name="xifan_hol_preference_title">Enable \"xifan hol\" input</string>
        <string name="xifan_hol_preference_summary">Allow typing \"x\" for {tlh}, \"f\" for {ng}, etc.</string>
        <string name="swap_qs_preference_title">Swap {Q} and {q}</string>
        <string name="swap_qs_preference_summary">Map \"k\" to {q} and \"q\" to {Q}.</string>
      <string name="social_preferences">Social preferences</string>
        <string name="social_network_preference_title">Social network</string>
        <string name="social_network_preference_summary">Choose your preferred social network.</string>
      <string name="informational_preferences">Informational preferences</string>
        <string name="use_colours_preference_title">Use colors</string>
        <string name="use_colours_preference_summary">Indicate different parts of speech using different colors.</string>
        <string name="show_transitivity_preference_title">Show transitivity</string>
        <string name="show_transitivity_preference_summary">Display \"best guess\" about whether a verb takes an object.</string>
        <string name="show_additional_information_preference_title">Show additional information</string>
        <string name="show_additional_information_preference_summary">Display detailed notes on puns, jokes, errors, etc.</string>
    <string name="warning">Warning</string>
    <string name="change_ui_language_warning">Changing the UI language may not completely take effect until this application is restarted.\n\nDo you wish to continue?</string>
    <string name="label_see_alt_entry">See</string>
    <string name="label_english">English</string>
    <string name="label_german">German</string>
    <string name="label_synonyms">Synonyms</string>
    <string name="label_antonyms">Antonyms</string>
    <string name="label_see_also">See also</string>
    <string name="label_category">Category</string>
    <string name="label_analyze">Analyze</string>
    <string name="label_components">Components</string>
    <string name="label_examples">Examples</string>
    <string name="label_sources">Source(s)</string>
    <string name="label_transitivity">Transitivity</string>
      <string name="transitivity_ambi">The role played by the subject of this verb changes depending on whether or not there is a direct object.</string>
      <string name="transitivity_intransitive">This verb probably cannot take a direct object.</string>
      <string name="transitivity_intransitive_confirmed">This verb cannot take a direct object.</string>
      <string name="transitivity_stative">This verb describes a state or quality and cannot take an object.</string>
      <string name="transitivity_transitive">This verb can probably take a direct object.</string>
      <string name="transitivity_transitive_confirmed">This verb can take a direct object.</string>
      <string name="transitivity_unknown">It is unknown whether this verb can take a direct object.</string>
    <string name="label_additional_information">Additional information</string>
    <string name="info_being">This word refers to a being capable of language. It takes the plural suffix {-pu\':n:suff}.</string>
    <string name="info_body">This word refers to a body part. It takes the plural suffix {-Du\':n:suff}.</string>
    <string name="info_inherent_plural">This word is inherently plural. Its singular form is %1$s.</string>
    <string name="info_singular_form">This word has an inherently plural form in %1$s.</string>
    <string name="warning_hypothetical">Warning: This entry is hypothetical. Use with caution!</string>
    <string name="warning_extended_canon">Warning: This entry is from extended canon. Use with caution!</string>
    <string name="menu_previous">Previous</string>
    <string name="menu_random">Random</string>
    <string name="menu_next">Next</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
</resources>